# mvvm

./: Cargo.toml  README.md
src/: System.rs
src/System/: ComponentModel.rs
src/System/ComponentModel/: observable_property.rs
