[package]
name = "mvvm"
version = "0.2.1"
edition = "2024"
description = "A fast, modular, platform-agnostic MVVM library, which is a Rust imitation of Microsoft's CommunityToolkit.Mvvm."
repository = "https://github.com/fxdmhtt/mvvm"
license = "GPL-2.0"
keywords = ["mvvm"]
categories = []

[dependencies]
event-rs = "0.1.0"
